[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "affine-gaps"
version = "0.2.4"
description = "JIT-compiled string edit-distances including Needleman-Wunsch, Smith-Waterman, Wagner-Fisher, and Gotoh algorithms."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Ash Vardanian", email = "1983160+ashvardanian@users.noreply.github.com" },
]
requires-python = ">=3.6"
dependencies = ["numpy"]
keywords = ["bioinformatics", "sequence alignment", "numba", "affine gaps"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
jit = ["numba", "colorama"]
dev = ["biopython", "stringzilla", "pytest", "pytest-repeat"]
numba = ["numba"]

[tool.pytest.ini_options]
addopts = "-s -x"

# Configuration options for the Black formatter:
# https://black.readthedocs.io/en/latest/usage_and_configuration/the_basics.html#where-black-looks-for-the-file
[tool.black]
line-length = 120                  # Set line length to the same value as in `.clang-format` for modern wide screens
target-version = ['py36', 'py312']

[project.scripts]
affine-gaps = "affine_gaps:main"
